Automation: clicking on a disabled option element shouldn't produce an error https://bugs.webkit.org/show_bug.cgi?id=183284

Reviewed by Brian Burg.

This was expected by selenium, but the WebDriver spec says we should simply do nothing in those cases.

14.1 Element Click.
https://w3c.github.io/webdriver/webdriver-spec.html#element-click

Fixes: imported/w3c/webdriver/tests/element_click/select.py::test_option_disabled

* WebProcess/Automation/WebAutomationSessionProxy.cpp:
(WebKit::WebAutomationSessionProxy::selectOptionElement):

Canonical link: https://commits.webkit.org/198993@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@229212 268f45cc-cd09-0410-ab3c-d52691b4dbfc