Source/WebKit/WebProcess/Automation/WebAutomationSessionProxy.cpp
@@ -653,15 +653,11 @@ void WebAutomationSessionProxy::selectOptionElement(uint64_t pageID, uint64_t fr
         return;
     }
 
-    if (selectElement->isDisabledFormControl() || optionElement.isDisabledFormControl()) {
-        String elementNotSelectableErrorType = Inspector::Protocol::AutomationHelpers::getEnumConstantValue(Inspector::Protocol::Automation::ErrorMessage::ElementNotSelectable);
-        WebProcess::singleton().parentProcessConnection()->send(Messages::WebAutomationSession::DidSelectOptionElement(callbackID, elementNotSelectableErrorType), 0);
-        return;
+    if (!selectElement->isDisabledFormControl() && !optionElement.isDisabledFormControl()) {
+        // FIXME: According to the spec we should fire mouse over, move and down events, then input and change, and finally mouse up and click.
+        // optionSelectedByUser() will fire input and change events if needed, but all other events should be fired manually here.
+        selectElement->optionSelectedByUser(optionElement.index(), true, selectElement->multiple());
     }
-
-    // FIXME: According to the spec we should fire mouse over, move and down events, then input and change, and finally mouse up and click.
-    // optionSelectedByUser() will fire input and change events if needed, but all other events should be fired manually here.
-    selectElement->optionSelectedByUser(optionElement.index(), true, selectElement->multiple());
     WebProcess::singleton().parentProcessConnection()->send(Messages::WebAutomationSession::DidSelectOptionElement(callbackID, { }), 0);
 }
 
